@@ -25,6 +25,7 @@ ChangeLog
 [-] * Correctly detect empty entries from Motorola.
 [-] * Better error reporting from at-charset test.
 [+] * smsd-inject now shows ID of injected message.
+[-] * Fix decoding of date in Nokia phonebooks (bug #876).
     
 20090415 - 1.24.0
 
